Only default to virtual threads if the JVM configuration supports them